[package]
name = "nexcore-cargo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Typed transport for PV rails — separates cargo (domain payload) from freight (conveyance)"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
